Fixes to the ToC on narrow web pages

--- a/src/css/variables.less
+++ b/src/css/variables.less
@@ -1,21 +1,18 @@
-@book-color:                   #a0c556;
+@book-color:               #a0c556;
 
-@border-radius-base:           0px;
-@border-radius-large:          0px;
-@border-radius-small:          0px;
+@border-radius-base:       0px;
+@border-radius-large:      0px;
+@border-radius-small:      0px;
 
-@container-tablet:             (720px + @grid-gutter-width);
-@container-sm:                 @container-tablet;
-@container-desktop:            (720px + @grid-gutter-width);
-@container-md:                 @container-desktop;
-@container-large-desktop:      (720px + @grid-gutter-width);
-@container-lg:                 @container-large-desktop;
+@headings-font-weight:     200;
 
-@headings-font-weight:         200;
-
-@pre-border-color:             transparent;
+@pre-border-color:         transparent;
 
 @shadow-color:             rgba(0, 0, 0, .15);
 @shadow-default:           0 4px 0 @shadow-color;
 @shadow-active:            0 4px 0 fadeIn(@shadow-color, 10%);
 @shadow-navbar:            0 4px 0 fadeOut(@shadow-color, 7%);
+
+@btn-default-color:        #333;
+@btn-default-bg:           #f7f7f7;
+@btn-default-border:       #f7f7f7;
